--- a/molecule/default/playbook.yml
+++ b/molecule/default/playbook.yml
@@ -66,6 +66,7 @@
           PyYAML==3.12
           six==1.11.0
           jmespath==0.9.3
+          dnspython==1.16.0
         dest: "{{ script_path }}/requirements.txt"
         remote_src: yes
     - name: install python requirements
