Fix generation of new instance id

--- a/molecule/default/playbook.yml
+++ b/molecule/default/playbook.yml
@@ -116,6 +116,8 @@
     - name: cleanup image
       shell: |
         cloud-init clean -l -s
+        echo -n > /etc/machine-id
+        echo -n > /var/lib/dbus/machine-id
         rm -rf /var/lib/cloud
         rm -rf /run/cloud-init
         rm -rf /home/ubuntu/.ssh/authorized_keys
