--- a/tox.ini
+++ b/tox.ini
@@ -10,3 +10,16 @@ deps =
     ansible26: ansible==2.6.2
 commands =
     {posargs:molecule test --all}
+
+[tox]
+minversion = 1.8
+envlist = py{36}-ansible{28}
+skipsdist = true
+
+[testenv]
+passenv = *
+deps =
+    -rtest-requirements.txt
+    ansible28: ansible==2.8.6
+commands =
+
