--- a/molecule/default/create.yml
+++ b/molecule/default/create.yml
@@ -12,15 +12,17 @@
       docker_container:
         name: "{{ item.name }}"
         hostname: "{{ item.name }}"
-        image: solita/ubuntu-systemd:latest
-        command: /sbin/init
-        capabilities:
-          - SYS_ADMIN
+        image: automium/testenv:bionic
+        privileged: true
         volumes:
           - /sys/fs/cgroup:/sys/fs/cgroup:ro
+          - /lib/modules:/lib/modules:ro
+          - /boot:/boot:ro
         tmpfs:
           - /run
           - /run/lock
+        dns_servers:
+          - "1.1.1.1"
         state: started
         recreate: no
         log_driver: none
