--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -15,6 +15,7 @@ provisioner:
   playbooks:
     create: create.yml
     prepare: prepare.yml
+    verify: verifier.yml
     destroy: destroy.yml
   lint:
     name: ansible-lint
