--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ before_deploy:
   - wget -O packer.zip https://releases.hashicorp.com/packer/1.3.1/packer_1.3.1_linux_amd64.zip
   - unzip -o packer.zip
   - sudo apt-get update
-  - sudo apt-get install qemu-utils -y
+  - sudo apt-get install qemu-utils python-apt -y
   - pip install --upgrade pip
   - pip install python-swiftclient==3.6.0 python-openstackclient==3.17.0
 
