update compose image

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@
 version: '3'
 services:
   molecule:
-    image: fminzoni/molecule
+    image: automium/molecule:2.22-bionic
     volumes:
       - .:/root/src/ansible-ubuntu1804
       - /var/run/docker.sock:/var/run/docker.sock
