--- a/molecule/default/playbook.yml
+++ b/molecule/default/playbook.yml
@@ -48,6 +48,8 @@
         - python3-venv
         - python3-minimal
         - python3-pip
+        - python-setuptools
+        - python3-setuptools
         - virtualenv
 
     - name: create directory
